--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@
                             <i class="fa fa-award text-primary"></i>
                         </div>
                         <div class="ps-4">
-                            <h5 class="text-white mb-0">Mots de passe securisés génerés</h5>
+                            <h5 class="text-white mb-0">Mots de passe securisés générés</h5>
                             <h1 class="text-white mb-0" data-toggle="counter-up">1325</h1>
                         </div>
                     </div>
@@ -166,8 +166,8 @@
                         <div class="service-icon">
                             <i class="fa fa-shield-alt text-white"></i>
                         </div>
-                        <h4 class="mb-3">Acceder a votre compte</h4>
-                        <p class="m-0">Vous y trouverez toutes vos recherches de noms de domaine, ainsi que vos mots de passes générés</p>
+                        <h4 class="mb-3">Accéder à votre compte</h4>
+                        <p class="m-0">Vous y trouverez toutes vos recherches de noms de domaine, ainsi que vos mots de passe générés</p>
                         <a class="btn btn-lg btn-primary rounded" href="{{ url_for('dashboard') }}">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -179,7 +179,7 @@
                             <i class="fa fa-chart-pie text-white"></i>
                         </div>
                         <h4 class="mb-3">Analyser un nom de domaine</h4>
-                        <p class="m-0">En cliquant sur le bouton ci dessous vous accederez directement à la page pour analyser n'importe quel site sur le Web</p>
+                        <p class="m-0">En cliquant sur le bouton ci-dessous, vous accèderez directement à la page pour analyser n'importe quel site sur le Web</p>
                         <a class="btn btn-lg btn-primary rounded" href="{{ url_for('analyze_page') }}">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -202,8 +202,8 @@
                         <div class="service-icon">
                             <i class="fab fa-android text-white"></i>
                         </div>
-                        <h4 class="mb-3">Generer un mot de passe sécurisé</h4>
-                        <p class="m-0">Grace a nos filtres spécifiques vous pouvez generer un mot de passe comme bon vous semble qui sera ensuite stocké sur votre compte</p>
+                        <h4 class="mb-3">Générer un mot de passe sécurisé</h4>
+                        <p class="m-0">Grâce à nos filtres spécifiques vous pouvez générer un mot de passe comme bon vous semble qui sera ensuite stocké sur votre compte</p>
                         <a class="btn btn-lg btn-primary rounded" href="{{ url_for('password') }}">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -215,7 +215,7 @@
                             <i class="fa fa-search text-white"></i>
                         </div>
                         <h4 class="mb-3">Tester la robustesse de mon mot de passe</h4>
-                        <p class="m-0">Vous pouvez acceder a un testeur de mot de passe pour vous reduire vos risques de vous faire pirater</p>
+                        <p class="m-0">Vous pouvez accéder à un testeur de mot de passe pour réduire les risques de vous faire pirater</p>
                         <a class="btn btn-lg btn-primary rounded" href="">
                             <i class="bi bi-arrow-right"></i>
                         </a>
@@ -224,7 +224,7 @@
                 <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
                     <div class="position-relative bg-primary rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
                         <h3 class="text-white mb-3">Contactez nous</h3>
-                        <p class="text-white mb-3">Pour plus d'informations ou reclamations n'hesitez pas a nous contacter a cette adresse mail !</p>
+                        <p class="text-white mb-3">Pour plus d'informations ou réclamations n'hésitez pas à nous contacter à cette adresse mail !</p>
                         <h2 class="text-white mb-0">n.mancino03@gmail.com</h2>
                     </div>
                 </div>
@@ -236,7 +236,7 @@
         <div class="container py-5">
             <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
                 <h5 class="fw-bold text-primary text-uppercase">Nos Services</h5>
-                <h1 class="mb-0">Voici ce que vous ofrre CyberTools</h1>
+                <h1 class="mb-0">Voici ce que vous offre CyberTools</h1>
             </div>
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
@@ -278,7 +278,7 @@
                 <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
                     <div class="position-relative bg-primary rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
                         <h3 class="text-white mb-3">Contactez nous</h3>
-                        <p class="text-white mb-3">Pour plus d'informations ou reclamations n'hesitez pas à nous contacter a cette adresse mail !</p>
+                        <p class="text-white mb-3">Pour plus d'informations ou réclamations n'hésitez pas à nous contacter à cette adresse mail !</p>
                         <h2 class="text-white mb-0">n.mancino03@gmail.com</h2>
                     </div>
                 </div>
