--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -7,7 +7,7 @@
                         <a href="/templates/index.php" class="navbar-brand">
                             <h1 class="m-0 text-white"><i class="fa fa-user-tie me-2"></i>CyberTools</h1>
                         </a>
-                        <p class="mt-3 mb-4">Pour plus d'informations ou réclamations, n'hesitez pas à nous contacter à cette adresse mail !</p>
+                        <p class="mt-3 mb-4">Pour plus d'informations ou réclamations, n'hésitez pas à nous contacter à cette adresse mail !</p>
                         <form action="">
                             <div class="input-group">
                                 <input type="text" class="form-control border-white p-3" placeholder="Your Email">
